refactor(security): 重构登录逻辑并添加异常处理
- 修改 login 方法以使用 LoginRequest 参数- 添加 AuthenticationException 异常捕获并抛出 BusinessException
- 更新 register 方法，使用 LocalDateTime 替代 Date
- 新增 BusinessException 类用于自定义异常处理
-调整 mapper 和 XML 文件以支持新的查询方法
- 优化 JwtAuthenticationFilter 中的 token 验证逻辑
- 更新 Response 类以支持多种响应场景
- 添加全局 CORS 配置